# Poetry pyproject.toml: https://python-poetry.org/docs/pyproject/
[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "pwpush"
version = "0.9.3"
description = "Command Line Interface to Password Pusher."
readme = "README.md"
authors = ["pwpush <pglombardo@hey.com>"]
license = "MIT"
repository = "https://github.com/pglombardo/pwpush"
homepage = "https://github.com/pglombardo/pwpush"

# Keywords description https://python-poetry.org/docs/pyproject/#keywords
keywords = []  #! Update me

# Pypi classifiers: https://pypi.org/classifiers/
classifiers = [  #! Update me
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
]

[tool.poetry.scripts]
# Entry points for the package https://python-poetry.org/docs/pyproject/#scripts
"pwpush" = "pwpush.__main__:app"

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
importlib_metadata = {version = ">=4.5,<7.0", python = "<3.8"}
typer = {extras = ["all"], version = ">=0.6.1,<0.10.0"}
rich = "^12.5.1"
requests = "^2.28.1"
shellingham = "^1.5.0"
python-dateutil = "^2.8.2"

[tool.poetry.dev-dependencies]
bandit = "^1.7.0"
black = {version = ">=22.6.0", allow-prereleases = true}
darglint = "^1.8.0"
isort = {extras = ["colors"], version = "^5.11.5"}
mypy = "^1.5"
mypy-extensions = "^1.0.0"
pre-commit = "^2.21.0"
pydocstyle = "^6.1.1"
pylint = "^2.17.5"
pytest = "^7.2.2"
pyupgrade = "^3.3.1"
safety = "^2.3.5"
ipdb = "^0.13.13"
ipython = "^8.12.2"

[tool.black]
# https://github.com/psf/black
target-version = ["py37"]
line-length = 88
color = true

exclude = '''
/(
    \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | env
    | venv
)/
'''

[tool.isort]
# https://github.com/timothycrosley/isort/
py_version = 37
line_length = 88

known_typing = ["typing", "types", "typing_extensions", "mypy", "mypy_extensions"]
sections = ["FUTURE", "TYPING", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
include_trailing_comma = true
profile = "black"
multi_line_output = 3
indent = 4
color_output = true

[tool.mypy]
# mypy configurations: https://mypy.readthedocs.io/en/latest/config_file.html#using-a-pyproject-toml-file
python_version = 3.7
pretty = true
show_traceback = true
color_output = true

allow_redefinition = false
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
ignore_missing_imports = true
implicit_reexport = false
no_implicit_optional = true
show_column_numbers = true
show_error_codes = true
show_error_context = true
strict_equality = true
strict_optional = true
warn_no_return = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true
