# Poetry pyproject.toml: https://python-poetry.org/docs/pyproject/
[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "pwpush"
version = "0.11.0"
description = "Command Line Interface to Password Pusher."
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "pwpush", email = "pglombardo@hey.com"}
]
keywords = ['security', 'cli', 'password', 'sharing']
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Information Technology",
  "Intended Audience :: System Administrators",
  "Intended Audience :: Financial and Insurance Industry",
  "Operating System :: OS Independent",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Security",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
]
requires-python = ">=3.9.2,<4.0"
dependencies = [
    "importlib_metadata>=4.5,<7.0; python_version<'3.8'",
    "typer[all]>=0.6.1,<0.16.0",
    "rich>=12.5.1,<14.0.0",
    "requests>=2.28.1,<3.0.0",
    "shellingham>=1.5.0,<2.0.0",
    "python-dateutil>=2.8.2,<3.0.0",
    "xkcdpass==1.19.9",
]

[project.urls]
Homepage = "https://github.com/pglombardo/pwpush"
Repository = "https://github.com/pglombardo/pwpush"

[project.scripts]
pwpush = "pwpush.__main__:app"

[tool.poetry]
# Keep minimal poetry configuration for build system compatibility
[tool.poetry.dependencies]
python = ">=3.9.2,<4.0"

[tool.poetry.group.dev.dependencies]
bandit = "^1.7.10"
black = {version = ">=22.6.0", allow-prereleases = true}
darglint = "^1.8.0"
isort = {extras = ["colors"], version = "^5.13.2"}
mypy = "^1.14"
mypy-extensions = "^1.1.0"
pre-commit = "^3.5.0"
pydocstyle = "^6.1.1"
pylint = "^3.2.7"
pytest = "^8.3.5"
pyupgrade = "^3.3.1"
safety = "^3.3.0"
ipdb = "^0.13.13"
ipython = "^8.18.1"
urllib3 = ">=2.5.0"
setuptools = ">=78.1.1"
cryptography = ">=44.0.1"
regex = ">=2025.7.29"

[tool.black]
# https://github.com/psf/black
target-version = ["py37"]
line-length = 88
color = true

exclude = '''
/(
    \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | env
    | venv
)/
'''

[tool.isort]
# https://github.com/timothycrosley/isort/
py_version = 37
line_length = 88

known_typing = ["typing", "types", "typing_extensions", "mypy", "mypy_extensions"]
sections = ["FUTURE", "TYPING", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
include_trailing_comma = true
profile = "black"
multi_line_output = 3
indent = 4
color_output = true

[tool.mypy]
# mypy configurations: https://mypy.readthedocs.io/en/latest/config_file.html#using-a-pyproject-toml-file
python_version = "3.8"
pretty = true
show_traceback = true
color_output = true

allow_redefinition = false
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
ignore_missing_imports = true
implicit_reexport = false
no_implicit_optional = true
show_column_numbers = true
show_error_codes = true
show_error_context = true
strict_equality = true
strict_optional = true
warn_no_return = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true
